# vmtaint

./: Makefile.am
files/: api.cpp  api.hpp  module-list.c  taintEngine.cpp  taintEngine.hpp
src/: steppertrace.cpp  vmtaint.cpp
